<resources>
    <string name="app_name">Stocker</string>

    // symbols
    <string name="currency_suffix">"$"</string>
    <string name="percents">"%"</string>
    <string name="add_percents" translatable="false">"%s%%"</string>

    // PageTitles
    <string name="title_your_stocks">Your Stocks</string>
    <string name="title_stock_detail">Stock Details</string>
    <string name="title_add_stock">Add Stock</string>

    // Stocks main
    <string name="title_stocks_list">Your Stocks</string>

    // OverView Card
    <string name="ov_title">"Portfolio Value"</string>
    <string name="ov_totalShares_label">"Total Shares"</string>
    <string name="ov_currentValue_placeholder">"current value"</string>
    <string name="ov_currentBalance_placeholder">"current balance"</string>
    <string name="ov_num_Documented_Shares">"Num. Documented Shares"</string>

    // Stock Card
    <string name="stock_card_currentPrice_placeholder">CurrentPrice</string>
    <string name="stock_card_balance_placeholder">Balance</string>

    // Stocks Details
    <string name="stock_details_ov_title">Stock Details</string>
    <string name="day_low">Day Low</string>
    <string name="day_high">Day High</string>
    <string name="day_start">Day Start</string>

    //Add stock Fragment
    <string name="enter_stock_ticker_symbol">Ticker Symbol *</string>
    <string name="enter_stock_description">Stock Description</string>
    <string name="enter_stock_buying_price">Stock buying price *</string>
    <string name="select_buying_date">Stock buying date *</string>
    <string name="pick_image">Pick Image</string>
    <string name="finish">Finish</string>
    <string name="ticker_symbol">Ticker Symbol</string>
    <string name="required">"Required"</string>
    <string name="abort_adding">Abort Adding Stock</string>
    <string name="abort_msg">Are you sure you want to cancel adding a new stock?</string>
    <string name="abort_yes">Yes</string>
    <string name="abort_no">No</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="discard_msg">Are you sure you want to discard the changes?</string>
    <string name="discard_yes">Discard</string>
    <string name="discard_no">Cancel</string>

    //Detailed stock Fragment
    <string name="stock_description">Description</string>
    <string name="buying_price">Buying Price: </string>
    <string name="buying_date">Buying Date: </string>
    <string name="stock_image">Stock image</string>
    <string name="price_zero">0.00</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="edit_stock">edit stock</string>

    <!-- Dialog's Strings   -->
    <string name="incomplete_add_stock_form">"Incomplete Form! Please Enter the required field"</string>
    <string name="delete_all_title">Delete All Stocks</string>
    <string name="delete_all_msg">Are you sure you want to delete all stocks?</string>
    <string name="delete_del_btn">Delete</string>
    <string name="delete_cancel_btn">Cancel</string>
    <string name="noMarketData">No market data found for the date chosen, entering last known price</string>
    <string name="noEnoughData">"Sorry not enough market data found for the parameters chosen, could not add stock"</string>

    <string name="delete_one_stock">Delete Stock</string>
    <string name="delete_one_stock_msg">Are you sure you want to delete this stock?</string>
    <string name="edit_button">Edit button</string>
    <string name="title_portfolio_summary">Portfolio Summary</string>
    <string name="portfolio_value_title">Current Portfolio Value:</string>
    <string name="current_portfolio_value_title">Portfolio Current Value:</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="current_portfolio_value">00.00</string>
    <string name="portfolio_change">Portfolio Change:</string>
    <string name="refresh_button">REFRESH</string>
    <string name="title_edit_stock">Edit Stock</string>
    <string name="company_name">Company Name</string>
    <string name="exchange">Exchange</string>
    <string name="search">Search</string>
    <string name="title_search">Search</string>
    <string name="country_name">Country Name</string>
    <string name="currency">Currency\t\t</string>
    <string name="enter_num_of_stocks">Enter number of stocks *</string>
    <string name="datetime_format">DD/MM/YYYY    HH:MM</string>
    <string name="summary">Summary</string>
    <string name="stock_list_empty_message">Your list is currently empty. \n\nAdd stocks to your list by clicking the + button.</string>
    <string name="stock_already_added">Stock already added, please choose another</string>
    <string name="portfolio_buying_value">Portfolio Buying Value</string>
    <string name="delete_all">Delete All</string>
    <string name="no_data_available">No data available</string>
    <string name="enter_ticker_symbol">Enter ticker symbol</string>
    <string name="Portfolio">Portfolio</string>
    <string name="stock_price">Stock Price\n</string>
    <string name="out_of_credit">Out of Api Credits.</string>
</resources>

