<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/searchItemTopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/searchItemSymbol"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/ticker_symbol"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/searchItemExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/exchange" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchItemBottomLayout"
            android:layout_below="@id/searchItemTopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/searchItemCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/currency" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchItemBottomLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_below="@id/searchItemBottomLayout">


            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_name"
                android:textSize="12sp"
                android:textColor="@color/black" />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
