<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.portfolio.PortfolioSummaryFragment"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">



    <!-- Portfolio Value -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/current_portfolio_value_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/current_portfolio_value_title" />

        <TextView
            android:id="@+id/current_portfolio_value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_portfolio_value"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Portfolio Change -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/portfolio_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/portfolio_change" />

        <TextView
            android:id="@+id/portfolio_change_value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="16sp"
            android:text="@string/current_portfolio_value"/>
    </LinearLayout>


    <!-- Portfolio Graph -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/portfolio_graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Refresh Button -->
    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh_button" />

</LinearLayout>
